--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,32 @@
-name: Deploy
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: SSH Deploy
-        env:
-          PRIVATE_KEY: "${{ secrets.SSH_PRIVATE_KEY }}"
-          HOST_NAME: ${{ secrets.SSH_HOST }}
-          USER_NAME: ${{ secrets.USER_NAME }}
-          PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
-          GIT_REPO: ${{ secrets.GIT_REPO }}
-        run: |
-          # Create .ssh directory
-          mkdir -p ~/.ssh
-
-          # Write key to file and set proper permissions
-          echo "$PRIVATE_KEY" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
-
-          # Add host to known hosts
-          ssh-keyscan -H ${HOST_NAME} >> ~/.ssh/known_hosts
-
-          # Use -T flag to disable pseudo-terminal allocation
-          ssh -T -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key ${USER_NAME}@${HOST_NAME} <<EOF
-            if [ ! -d "${PROJECT_PATH}/.git" ]; then
-              mkdir -p \$(dirname ${PROJECT_PATH})
-              git clone ${GIT_REPO} ${PROJECT_PATH}
-            fi
-
-            cd ${PROJECT_PATH}
-            git checkout main
-            git fetch --all
-            git reset --hard origin/main
-            git pull origin main          
-      
-          EOF
+- name: SSH Deploy
+  env:
+    PRIVATE_KEY: "${{ secrets.SSH_PRIVATE_KEY }}"
+    HOST_NAME: ${{ secrets.SSH_HOST }}
+    USER_NAME: ${{ secrets.USER_NAME }}
+    PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
+    GIT_REPO: ${{ secrets.GIT_REPO }}
+  run: |
+    mkdir -p ~/.ssh
+    echo "$PRIVATE_KEY" > ~/.ssh/deploy_key
+    chmod 600 ~/.ssh/deploy_key
+    ssh-keyscan -H ${HOST_NAME} >> ~/.ssh/known_hosts
+    
+    ssh -T -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key ${USER_NAME}@${HOST_NAME} <<EOF
+      [ -z "$PROJECT_PATH" ] && echo "PROJECT_PATH not set" && exit 1
+      [ -z "$GIT_REPO" ] && echo "GIT_REPO not set" && exit 1
+    
+      if [ ! -d "${PROJECT_PATH}/.git" ]; then
+        echo "Cloning repository..."
+        rm -rf ${PROJECT_PATH}
+        mkdir -p ${PROJECT_PATH}
+        git clone ${GIT_REPO} ${PROJECT_PATH}
+      else
+        echo "Repository exists, pulling latest changes..."
+      fi
+    
+      cd ${PROJECT_PATH}
+      git checkout main
+      git fetch --all
+      git reset --hard origin/main
+      git pull origin main
+    EOF
